// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > should not render clear icon when allowClear is disabled 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal css-var-root ant-form-css-var css-dev-only-do-not-override-19u5a7b"
  >
    <div
      class="ant-select ant-select-lg ant-select-outlined css-var-root ant-select-css-var css-dev-only-do-not-override-19u5a7b ant-select-single ant-select-show-arrow"
      name="test"
    >
      <div
        class="ant-select-content"
      >
        <div
          class="ant-select-placeholder"
        />
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="new-password"
          class="ant-select-input"
          id="test"
          readonly=""
          role="combobox"
          type="text"
          value=""
        />
      </div>
      <div
        class="ant-select-suffix"
      >
        <svg
          data-testid="caret-down"
          fill="currentColor"
          height="14"
          viewBox="0 0 256 256"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </div>
    </div>
  </form>
</div>
`;

exports[`Select > should render correctly 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal css-var-root ant-form-css-var css-dev-only-do-not-override-19u5a7b"
  >
    <div
      class="ant-select ant-select-lg ant-select-outlined css-var-root ant-select-css-var css-dev-only-do-not-override-19u5a7b ant-select-single ant-select-show-arrow"
      name="test"
    >
      <div
        class="ant-select-content"
      >
        <div
          class="ant-select-placeholder"
        />
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="new-password"
          class="ant-select-input"
          id="test"
          readonly=""
          role="combobox"
          type="text"
          value=""
        />
      </div>
      <div
        class="ant-select-suffix"
      >
        <svg
          data-testid="caret-down"
          fill="currentColor"
          height="14"
          viewBox="0 0 256 256"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </div>
    </div>
  </form>
</div>
`;

exports[`Select > should render with allowClear enabled 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal css-var-root ant-form-css-var css-dev-only-do-not-override-19u5a7b"
  >
    <div
      class="ant-select ant-select-lg ant-select-outlined css-var-root ant-select-css-var css-dev-only-do-not-override-19u5a7b ant-select-single ant-select-show-arrow"
      name="test"
    >
      <div
        class="ant-select-content"
      >
        <div
          class="ant-select-placeholder"
        />
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="new-password"
          class="ant-select-input"
          id="test"
          readonly=""
          role="combobox"
          type="text"
          value=""
        />
      </div>
      <div
        class="ant-select-suffix"
      >
        <svg
          data-testid="caret-down"
          fill="currentColor"
          height="14"
          viewBox="0 0 256 256"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </div>
    </div>
  </form>
</div>
`;

exports[`Select > should render with loading indicator 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal css-var-root ant-form-css-var css-dev-only-do-not-override-19u5a7b"
  >
    <div
      class="ant-select ant-select-lg ant-select-outlined css-var-root ant-select-css-var css-dev-only-do-not-override-19u5a7b ant-select-single ant-select-show-arrow ant-select-loading"
      name="test"
    >
      <div
        class="ant-select-content"
      >
        <div
          class="ant-select-placeholder"
        />
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="new-password"
          class="ant-select-input"
          id="test"
          readonly=""
          role="combobox"
          type="text"
          value=""
        />
      </div>
      <div
        class="ant-select-suffix ant-select-suffix-loading"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-sm ant-spin-spinning ant-spin-section css-dev-only-do-not-override-19u5a7b css-var-root"
          data-testid="loading-spinner"
        >
          <span
            aria-label="loading"
            class="anticon anticon-loading anticon-spin ant-spin-dot"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="loading"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Select > should render with options 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal css-var-root ant-form-css-var css-dev-only-do-not-override-19u5a7b"
  >
    <div
      class="ant-select ant-select-lg ant-select-outlined css-var-root ant-select-css-var css-dev-only-do-not-override-19u5a7b ant-select-single ant-select-show-arrow"
      name="test"
    >
      <div
        class="ant-select-content"
      >
        <div
          class="ant-select-placeholder"
        />
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="new-password"
          class="ant-select-input"
          id="test"
          readonly=""
          role="combobox"
          type="text"
          value=""
        />
      </div>
      <div
        class="ant-select-suffix"
      >
        <svg
          data-testid="caret-down"
          fill="currentColor"
          height="14"
          viewBox="0 0 256 256"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </div>
    </div>
  </form>
</div>
`;

exports[`Select > should render with search enabled 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal css-var-root ant-form-css-var css-dev-only-do-not-override-19u5a7b"
  >
    <div
      class="ant-select ant-select-lg ant-select-outlined css-var-root ant-select-css-var css-dev-only-do-not-override-19u5a7b ant-select-single ant-select-show-arrow ant-select-show-search"
      name="test"
    >
      <div
        class="ant-select-content"
      >
        <div
          class="ant-select-placeholder"
        />
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="new-password"
          class="ant-select-input"
          id="test"
          role="combobox"
          type="text"
          value=""
        />
      </div>
      <div
        class="ant-select-suffix"
      >
        <svg
          data-testid="caret-down"
          fill="currentColor"
          height="14"
          viewBox="0 0 256 256"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </div>
    </div>
  </form>
</div>
`;
